[gd_scene load_steps=20 format=3 uid="uid://cdy6mx4d0w0lh"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_d4e4b"]
[ext_resource type="Texture2D" uid="uid://emsvb5p08hsh" path="res://NinjaAdventure/Actor/Characters/GreenNinja/PlayerSprite.png" id="1_v2hfv"]
[ext_resource type="Resource" uid="uid://orxciegq4pjo" path="res://Inventory/player_inventory.tres" id="2_a3cqt"]
[ext_resource type="PackedScene" uid="uid://ctxsju4hyn3be" path="res://Player/weapons.tscn" id="3_pcrms"]

[sub_resource type="Animation" id="Animation_u41vj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_xbrr5"]
resource_name = "hurtBlink"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.0002, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0.470588), Color(1, 0, 0, 0.470588), Color(1, 0, 0, 0.470588), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mgm54"]
_data = {
"RESET": SubResource("Animation_u41vj"),
"hurtBlink": SubResource("Animation_xbrr5")
}

[sub_resource type="Animation" id="Animation_td3ig"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_istmc"]
resource_name = "attack_down"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 4)]
}

[sub_resource type="Animation" id="Animation_2l22g"]
resource_name = "attack_left"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(2, 4)]
}

[sub_resource type="Animation" id="Animation_5lngg"]
resource_name = "attack_right"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(3, 4)]
}

[sub_resource type="Animation" id="Animation_1qnst"]
resource_name = "attack_up"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 4)]
}

[sub_resource type="Animation" id="Animation_eycma"]
resource_name = "walk_down"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 2), Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_6wb0p"]
resource_name = "walk_left"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 0), Vector2i(2, 1), Vector2i(2, 2), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_wvrmb"]
resource_name = "walk_right"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(3, 1), Vector2i(3, 2), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_jwv83"]
resource_name = "walk_up"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d8kha"]
_data = {
"RESET": SubResource("Animation_td3ig"),
"attack_down": SubResource("Animation_istmc"),
"attack_left": SubResource("Animation_2l22g"),
"attack_right": SubResource("Animation_5lngg"),
"attack_up": SubResource("Animation_1qnst"),
"walk_down": SubResource("Animation_eycma"),
"walk_left": SubResource("Animation_6wb0p"),
"walk_right": SubResource("Animation_wvrmb"),
"walk_up": SubResource("Animation_jwv83")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6a7cy"]
size = Vector2(14, 4)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_onkih"]
radius = 4.0
height = 14.0

[node name="Player" type="CharacterBody2D"]
z_index = 1
script = ExtResource("1_d4e4b")
inventory = ExtResource("2_a3cqt")

[node name="HitEffect" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mgm54")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
clip_children = 2
texture = ExtResource("1_v2hfv")
offset = Vector2(0, -8)
hframes = 4
vframes = 7

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
anchors_preset = -1
anchor_left = -0.623
anchor_top = -0.312
anchor_right = -0.623
anchor_bottom = -0.312
offset_left = -1.032
offset_top = -16.008
offset_right = 21.968
offset_bottom = 9.992
grow_horizontal = 2
grow_vertical = 0
color = Color(1, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d8kha")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_6a7cy")

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2(0, -7)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_onkih")

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Weapons" parent="." instance=ExtResource("3_pcrms")]
visible = false

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_exited" from="HurtBox" to="." method="_on_hurt_box_area_exited"]
